**  denotes quite substantial/important changes
*** denotes really big changes 

1.7-24

* Fix for bug in fast REML code that could cause bam to fail with ti/te only
  models. Thanks to Martijn Wieling.

* Fix of bug in extract.lme.cov2, which could cause gamm to fail when
  a correlation structure was nested inside a grouping factor finer than
  the finest random effect grouping factor. 

* Fix for an interesting feature of lme that getGroups applied to the 
  corStruct that is part of the fitted lme object returns groups in 
  sorted order, not data frame order, and without an index from one order 
  to the other. (Oddly, the same corStruct Initialized outside lme has its 
  groups  in data frame order.) This feature could cause gamm to fail,
  complaining that the grouping factors for the correlation did not appear 
  to be nested inside the correlation structure of the random effects. A 
  bunch of ordering sensitivity tests have been added to the mgcv test suite.
  Thanks to Dave Miller for reporting the bug. 

1.7-23

*** Fix of severe bug introduced with R 2.15.2 LAPACK change. The shipped
  version of dsyevr can fail to produce orthogonal eigenvectors when 
  uplo='U' (upper triangle of symmetric matrix used), as opposed to 'L'. 
  This led to a substantial number of gam smoothing parameter estimation 
  convergence failures, as the key stabilizing re-parameterization was 
  substantially degraded. The issue did not affect gaussian additive models
  with GCV model selection. Other models could fail to converge any further 
  as soon as any smoothing parameter became `large', as happens when a 
  smooth is estimated as a straight line. check.gam reported the lack of full 
  convergence, but the issue could also generate complete fit failures.
  Picked up late as full test suite had only been run on R > 2.15.1 with an 
  external LAPACK.

** 'ti' smooth specification introduced, which provides a much better (and 