@@ -200,9 +200,11 @@ The negbin family is only supported for the *known theta* case.
 
 \examples{
 library(mgcv)
-## Some not very large examples...
+## Some examples are marked 'Not run' purely to keep 
+## checking load on CRAN down. Sample sizes are small for 
+## the same reason.
 
-dat <- gamSim(1,n=40000,dist="normal",scale=20)
+dat <- gamSim(1,n=20000,dist="normal",scale=20)
 bs <- "cr";k <- 20
 b <- bam(y ~ s(x0,bs=bs,k=k)+s(x1,bs=bs,k=k)+s(x2,bs=bs,k=k)+
            s(x3,bs=bs,k=k),data=dat)
@@ -210,14 +212,15 @@ summary(b)
 plot(b,pages=1,rug=FALSE)  ## plot smooths, but not rug
 plot(b,pages=1,rug=FALSE,seWithMean=TRUE) ## `with intercept' CIs
 
+\dontrun{ 
 ba <- bam(y ~ s(x0,bs=bs,k=k)+s(x1,bs=bs,k=k)+s(x2,bs=bs,k=k)+
             s(x3,bs=bs,k=k),data=dat,method="GCV.Cp") ## use GCV
-summary(ba)
+summary(ba)}
 
 ## A Poisson example...
 
 k <- 15
-dat <- gamSim(1,n=15000,dist="poisson",scale=.1)
+dat <- gamSim(1,n=11000,dist="poisson",scale=.1)
 system.time(b1 <- bam(y ~ s(x0,bs=bs,k=k)+s(x1,bs=bs,k=k)+s(x2,bs=bs,k=k)+
             s(x3,bs=bs,k=k),data=dat,family=poisson()))
 b1
@@ -235,8 +238,10 @@ system.time(b2 <- bam(y ~ s(x0,bs=bs,k=k)+s(x1,bs=bs,k=k)+s(x2,bs=bs,k=k)+
 
 ## ... first call has startup overheads, repeat shows speed up...
 
+\dontrun{
 system.time(b2 <- bam(y ~ s(x0,bs=bs,k=k)+s(x1,bs=bs,k=k)+s(x2,bs=bs,k=k)+
        s(x3,bs=bs,k=k),data=dat,family=poisson(),cluster=cl))
+}
 
 fv <- predict(b2,cluster=cl) ## parallel prediction
 
@@ -244,11 +249,12 @@ if (!is.null(cl)) stopCluster(cl)
 b2
 
 ## Sparse smoother example...
+\dontrun{
 dat <- gamSim(1,n=10000,dist="poisson",scale=.1)
 system.time( b3 <- bam(y ~ te(x0,x1,bs="ps",k=10,np=FALSE)+
              s(x2,bs="ps",k=30)+s(x3,bs="ps",k=30),data=dat,
              method="REML",family=poisson(),sparse=TRUE))
-b3
+b3}
 
 }
 
