@@ -3,6 +3,11 @@
 
 1.7-24
 
+* Bug fix in C code for "cr" basis, that could cause a memory violation during
+  prediction, when an extrapolation was immediately followed by a prediction 
+  that lay exactly on the upper boundary knot. Thanks to Keith Woolner for 
+  reporting this.
+
 * Fix for bug in fast REML code that could cause bam to fail with ti/te only
   models. Thanks to Martijn Wieling.
 
